# databricks-asset-bundle-project

./: .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json.template
resources/jobs/: example_job.yml
resources/notebooks/: example_pipeline.py
src/my_project/: app.py
src/my_project/transforms/: example.py
tests/: test_app.py
