[tool.poetry]
name = "dab-podman-template"
version = "0.1.0"
description = "Minimal Podman-based Databricks Asset Bundle template"
authors = ["bsr-the-mngrm <me@sandorbakos.com>"]
readme = "README.md"
packages = [{ include = "my_project", from = "src" }]

[tool.poetry.dependencies]
python = "3.12.3"
pyspark = "4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
bandit = "^1.8.6"
pyright = "^1.1.403"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
extend-exclude = ["resources/notebooks/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"